# software-engineer-challenge

./: .gitignore  SOLUTION.md  app.py  pyproject.toml  test.py
assets/: Women's high jump world record progression - Wikipedia.html  table_with_first_column_not_numeric.csv  table_with_nan.csv  women_high_jump.csv
docs/: Foreign relations of Macau - Wikipedia.html  Wikipedia, the free encyclopedia.html  foreign_relations_macau.csv
