[tool.poetry]
name = "qunm-software-challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pytest = "^8.2.1"
lxml = "^5.2.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"
pytest-cov = "^5.0.0"
matplotlib = "^3.9.0"
pytest-image-diff = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
